conformance: wire the vgi_rpc.Identity.v1 fixture
Two fixture workers, one binary: `--identity both` configures the resolve and
mint hooks, `--identity introspect-only` configures the resolve hook alone so
`issue_grant` is absent rather than hosted-and-refusing and the protocol hash
narrows with it. Both HTTP, because Identity's guards all read an
authenticated caller and HTTP is the transport that carries one. The plain
worker deliberately grows nothing: that it hosts no identity protocol at all
is itself one of the group's assertions.

The policy is pinned by IDENTITY_CONFORMANCE_FIXTURE.md and not negotiable --
six ports configure the same allowlist, the same resolver table, the same
minter, or the group asserts nothing, because every answer is otherwise
explicable as deployment policy. Two rules shape it. The resolver resolves
almost everything, so a rejection can only have come from a guard and a guard
that fails to fire produces a loud success rather than a green test. Both
hooks are pure functions of their arguments, so the worker answers identically
on the first call and the thousandth.

The conformance authenticator grows one header. `X-Conformance-Auth-Time`
lands in the claim map verbatim and unparsed: a fixture that parsed it and
dropped what would not parse would collapse "carries an unusable auth_time"
into "carries no auth_time", and both answer stale_auth, so the test would
stay green while the property it names went untested. The guard parses; the
fixture only transports.

Also adds the third raw-transport case §7 asks every port for -- an anonymous
raw transport cannot mint. The shared group is HTTP-only, so the fail-closed
behaviour of a transport carrying no principal is covered here.

77 cases, run rather than skipped: 1365 passed / 0 failed / 0 skipped, up from
1289 / 0 / 76.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01K2bAuCcTPfo6qEGkN8GoL3